# estagio_teste

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  example.env  pyproject.toml
.github/workflows/: deploy_img_docker.yml  release.yml
backend/: lambda_function.py
backend/api/: filters.py  models.py  serializer.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_enterprise_ddd.py
backend/core/: settings.py  urls.py
backend/db/create_table/: create_table_2024.sql  create_table_report.sql
backend/db/search_expenses/: search_expenses_quarter.sql
backend/tests/api/postman_collection/: Test API.postman_collection.json
backend/tests/api/report/: Test API.postman_test_run.json
backend/web_scraping/tests/: tests_.py
backend/web_scraping/utils/: options.py
data_extraction/: main.py
db/convert_data/: convert_data.sql
db/create_table/: create_table_2023.sql
db/import_csv/: import_csv.sql
db/search_expenses/: search_expenses_year.sql
frontend/: example.env  index.html
frontend/src/: App.vue  style.css
frontend/src/components/: List.vue  Search.vue
scripts/: release.sh
webScraping/: main.py
webScraping/utils/: file_manager.py  options.py
web_scraping/: main.py
web_scraping/utils/: abstract_driver.py  file_manager.py
